--- a/oneM2MTester/package.json
+++ b/oneM2MTester/package.json
@@ -7,7 +7,8 @@
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
     "ejs": "^2.4.2",
-    "mysql": "^2.11.1"
+    "mysql": "^2.11.1",
+    "request": "^2.72.0"
   },
   "devDependencies": "oneM2M Web Tester",
   "scripts": {
