Complete the GET, POST, PUT, DELETE functions

--- a/oneM2MTester/package.json
+++ b/oneM2MTester/package.json
@@ -1,6 +1,6 @@
 {
   "name": "onem2m-tester",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "app.js",
   "dependencies": {
@@ -14,6 +14,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "JaeYoung Hwang",
+  "author": "JaeYoung Hwang / forest62590@gmail.com",
   "license": "ISC"
 }
